--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .container {
   max-width: 1185px;
   width: 100%;
@@ -13,17 +15,23 @@
 .homeInner {
   display: flex;
   justify-content: space-between;
+  gap: 0 20px;
 }
 
 .menu {
-  // background-color: #333;
   width: 30%;
-  box-shadow: 0px 0px 10px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 10px 5px rgba(34, 60, 80, 0.2);
+  border-radius: 5px;
 
   .menuInner {
     margin: 0;
     padding: 0;
     list-style: none;
+    transition: border-left 0.2s linear;
+
+    li:hover {
+      border-left: 2px solid $color-primary;
+    }
   }
 
   .menuItem {
@@ -34,7 +42,7 @@
 
     border-bottom: 1px solid #ccc;
 
-    transition: color .2s linear;
+    transition: color 0.2s linear;
     &:hover {
       color: red;
     }
@@ -42,6 +50,7 @@
 }
 
 .homeSlider {
-  // background-color: red;
   width: 70%;
+  border-radius: 5px;
+  overflow: hidden;
 }
