--- a/src/components/ProductsList/ProductsList.module.scss
+++ b/src/components/ProductsList/ProductsList.module.scss
@@ -1,5 +1,25 @@
-.container {}
+.container {
+  max-width: 1185px;
+  width: 100%;
+  padding: 12px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-.productsList {}
+.productsList {
+  background-color: #ebebeb;
+  padding: 50px 0;
 
-.productsListInner {}
+  .title {
+    margin: 0 0 20px;
+  }
+}
+
+.productsListInner {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0 20px;
+}
