--- a/src/components/ProductsCard/ProductsCard.module.scss
+++ b/src/components/ProductsCard/ProductsCard.module.scss
@@ -3,7 +3,6 @@
 .productsCard {
   max-width: 300px;
   width: 100%;
-  // height: 400px;
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -18,18 +17,42 @@
     display: block;
     max-width: 100%;
     height: auto;
-    // object-fit: cover;
   }
 
-  .cardInfo {
+  .info {
     padding: 16px;
     display: flex;
     justify-content: space-between;
+
+    .cardInfo {
+      display: flex;
+      flex-direction: column;
+
+      .infoHeader {
+        margin-bottom: 10px;
+      }
+
+      .inStock {
+        margin: 0;
+        font-size: 12px;
+        font-weight: 400;
+        color: #969696;
+      }
+    }
+
+    .link {
+      text-decoration: none;
+      color: inherit;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 
   .title {
     margin: 0;
-    margin-bottom: 20px;
+    // margin-bottom: 10px;
     font-size: 20px;
   }
 
@@ -78,7 +101,7 @@
 
     .counter {
       position: absolute;
-      top: 23px;
+      top: 28px;
       right: 8px;
     }
   }
