--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+@import '../../scss/_variables.scss';
+@import '../../scss/_media_breakpoints.scss';
 
 .container {
   max-width: 1185px;
@@ -16,10 +17,6 @@
 .row {
   display: flex;
   justify-content: space-between;
-
-  @media screen and (max-width: 400px) {
-    flex-wrap: wrap;
-  }
 }
 
 .logo {
@@ -130,7 +127,7 @@
       border-radius: 50%;
       width: 30px;
       height: 30px;
-      transition: background-color .2s linear;
+      transition: background-color 0.2s linear;
 
       &:hover {
         background-color: #333;
@@ -141,5 +138,15 @@
       width: 16px;
       height: 16px;
     }
+  }
+}
+
+@include mobile {
+  .container {
+    max-width: calc(375px - 24px);
+  }
+
+  .row {
+    flex-wrap: wrap;
   }
 }
