--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+@import '../../scss/_variables.scss';
+@import '../../scss/_media_breakpoints.scss';
 
 .secondary {
   height: 40px;
@@ -6,18 +7,13 @@
   align-items: center;
   background-color: $color-primary;
   color: #ffffff;
-
-  @media screen and (max-width: 400px) {
-    display: none;
-  }
 }
 
 .container {
   max-width: 1185px;
   width: 100%;
   padding: 12px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
 }
 
 .containerInner {
@@ -36,7 +32,7 @@
 }
 
 .city::before {
-  content: url('../../../public/icons/location.png');
+  content: url('/icons/location.png');
   margin-right: 5px;
 }
 
@@ -65,59 +61,59 @@
   align-items: center;
   height: 50px;
 
-  .link {
-    @media screen and (max-width: 400px) {
-      display: none;
-    }
+  .logo {
+    display: block;
+    max-width: 100%;
+    height: auto;
   }
 
   .search {
     width: 50%;
     display: flex;
 
+    .burgerMenu {
+      display: none;
+    }
+
     .inputSearch {
-      width: 100%;
-      height: 100%;
-      padding: 10px;
-      border: 2px solid #ccc;
-      border-right-width: 0;
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
-      outline: none;
-
-      &:focus {
-        border-color: $color-primary;
-      }
-    }
-
-    .btnSearch {
-      width: 40px;
-      border-radius: 0 10px 10px 0;
-      border: 0;
-      background-color: $color-primary;
-      transition: background-color 0.2s linear;
       display: flex;
-      justify-content: center;
-      align-items: center;
-
-      &:hover {
-        background-color: #bf0025;
-        cursor: pointer;
-      }
-      // border-top-left-radius: 0px;
-      // border-top-right-radius: 0px;
-      // border-bottom-right-radius: 0px;
-      // border-bottom-left-radius: 0px;
-    }
-
-    img {
-      width: 20px;
-      height: 20px;
-      position: absolute;
-    }
-
-    @media screen and (max-width: 400px) {
+      justify-content: space-between;
       flex: 1;
+
+      .input {
+        flex: 1;
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-right-width: 0;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        outline: none;
+
+        &:focus {
+          border-color: $color-primary;
+        }
+      }
+
+      .btnSearch {
+        width: 40px;
+        border-radius: 0 10px 10px 0;
+        border: 0;
+        background-color: $color-primary;
+        transition: background-color 0.2s linear;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+          background-color: #bf0025;
+          cursor: pointer;
+        }
+        // border-top-left-radius: 0px;
+        // border-top-right-radius: 0px;
+        // border-bottom-right-radius: 0px;
+        // border-bottom-left-radius: 0px;
+      }
     }
   }
 
@@ -160,17 +156,13 @@
       }
     }
   }
-
-  @media screen and (max-width: 400px) {
-    gap: 10px;
-  }
 }
 
-.mainLogo {
-  width: 208px;
-  height: 47px;
-  background: url('../../assets/logo/main-logo.png') no-repeat center / cover;
-}
+// .mainLogo {
+//   width: 208px;
+//   height: 47px;
+//   background: url('../../assets/logo/main-logo.png') no-repeat center / cover;
+// }
 
 .headerTooltip {
   display: flex;
@@ -219,8 +211,78 @@
       border-bottom: 2px solid $color-primary;
     }
   }
+}
 
-  @media screen and (max-width: 400px) {
+@include mobile {
+  .container {
+    max-width: calc(375px - 24px);
+  }
+
+  .secondary {
+    display: none;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .headerMain {
+    gap: 20px;
+    flex-direction: column;
+    padding: 0 0 40px;
+
+    .headerTop {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+
+      .logo {
+        width: 100px;
+      }
+
+      .headerUser {
+        .user,
+        .cart {
+          width: 30px;
+          height: 30px;
+
+          img {
+            width: 15px;
+            height: 15px;
+          }
+        }
+      }
+    }
+
+    .search {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      gap: 5px;
+
+      .burgerMenu {
+        display: block;
+        border: 0;
+        border-radius: 10px;
+        width: 41px;
+        height: auto;
+        background: url('/icons/menu.svg') no-repeat center / cover;
+        background-color: #ebebeb;
+        background-size: 30px;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      .input {
+        border-width: 1px;
+      }
+    }
+  }
+
+  .headerTooltip {
     display: none;
   }
 }
