--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+@import '../../scss/_variables.scss';
+@import '../../scss/_media_breakpoints.scss';
 
 .container {
   max-width: 1185px;
@@ -6,10 +7,6 @@
   padding: 12px;
   margin-right: auto;
   margin-left: auto;
-}
-
-.home {
-  // background-color: #333;
 }
 
 .homeInner {
@@ -47,18 +44,24 @@
       color: red;
     }
   }
-
-  @media screen and (max-width: 400px) {
-    display: none;
-  }
 }
 
 .homeSlider {
   width: 70%;
-  border-radius: 5px;
+  border-radius: 10px;
   overflow: hidden;
+}
 
-  @media screen and (max-width: 400px) {
+@include mobile {
+  .container {
+    max-width: calc(375px - 24px);
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .homeSlider {
     width: 100%;
   }
 }
