--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,3 +1,5 @@
+@import '../../scss/_media_breakpoints.scss';
+
 .wrap {
   flex: 1 1 auto;
   -webkit-backface-visibility: hidden;
@@ -40,8 +42,10 @@
       margin: 0;
     }
   }
+}
 
-  @media screen and (max-width: 400px) {
+@include mobile {
+  .bottomNav {
     display: flex;
   }
 }
