--- a/src/components/LoginPopup/LoginPopup.module.scss
+++ b/src/components/LoginPopup/LoginPopup.module.scss
@@ -29,7 +29,7 @@
   width: 20px;
   height: 20px;
   border: 0;
-  background: url('../../../public/icons/plus.svg') no-repeat center / cover;
+  background: url('/icons/plus.svg') no-repeat center / cover;
   transform: rotate(45deg);
   transition: transform .2s linear;
   position: absolute;
