--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -146,7 +146,17 @@
     max-width: calc(375px - 24px);
   }
 
+  .footer {
+    transform: translatey(-50px);
+    font-size: 14px;
+  }
+
   .row {
     flex-wrap: wrap;
+  }
+
+  .about,
+  .customCare {
+    display: none;
   }
 }
