--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,7 +1,6 @@
 @import '../../scss/_media_breakpoints.scss';
 
-.wrap {
-  flex: 1 1 auto;
+.page {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   display: flex;
@@ -9,43 +8,4 @@
   min-height: 100vh;
   max-width: 100%;
   position: relative;
-}
-
-.bottomNav {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 50px;
-  padding: 10px;
-  background-color: #ddd;
-  display: none;
-  align-items: center;
-  justify-content: space-between;
-
-  .bottomNavLink {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 600;
-    color: #000;
-
-    img {
-      width: 20px;
-      height: 20px;
-    }
-
-    p {
-      margin: 0;
-    }
-  }
-}
-
-@include mobile {
-  .bottomNav {
-    display: flex;
-  }
 }
