добавил маску для телефона

--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,4 +1,4 @@
-@import '../../scss/_variables.scss';
+@import '../../scss/variables.scss';
 
 .form {
   display: flex;
@@ -6,11 +6,6 @@
   width: 300px;
 
   .content {
-    // display: flex;
-    // flex-direction: column;
-    // padding: 0;
-    // margin: 0;
-    // border: 0;
     position: relative;
     margin-bottom: 32px;
   }
@@ -51,6 +46,23 @@
 
     &:focus {
       background-color: $color-primary;
+    }
+  }
+
+  .bottomSpan {
+    font-size: 12px;
+    font-weight: 300;
+    padding-top: 10px;
+    text-align: center;
+
+    a {
+      text-decoration: none;
+      color: $color-primary;
+      font-weight: 400;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
