--- a/src/components/LoginPopup/LoginPopup.module.scss
+++ b/src/components/LoginPopup/LoginPopup.module.scss
@@ -1,3 +1,5 @@
+@import '../../scss/_media_breakpoints.scss';
+
 .bg {
   position: fixed;
   left: 0;
@@ -8,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0,0,0,.5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .popup {
@@ -22,7 +24,7 @@
 }
 
 .title {
-  margin: 0 0 20px;
+  margin: 0;
 }
 
 .close {
@@ -31,7 +33,7 @@
   border: 0;
   background: url('/icons/plus.svg') no-repeat center / cover;
   transform: rotate(45deg);
-  transition: transform .2s linear;
+  transition: transform 0.2s linear;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -39,5 +41,13 @@
   &:hover {
     cursor: pointer;
     transform: rotate(-45deg);
+  }
+}
+
+@include mobile {
+  .popup {
+    border-radius: 10px;
+    width: 100%;
+    max-width: 250px;
   }
 }
