--- a/src/components/MenuMobile/MenuMobile.module.scss
+++ b/src/components/MenuMobile/MenuMobile.module.scss
@@ -20,11 +20,12 @@
   visibility: hidden;
   top: 0;
   left: -100%;
-  width: 250px;
+  width: 100%;
   height: 100vh;
   padding: 76px 24px 24px;
   background: white;
   box-shadow: 4px 4px 30px 5px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
   transition-duration: .25s;
   overflow-y: auto;
   overflow-x: hidden;
@@ -43,7 +44,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  padding: 16px 24px;
   background: #f8f8f8;
 }
 
