--- a/src/components/ProductsList/ProductsList.module.scss
+++ b/src/components/ProductsList/ProductsList.module.scss
@@ -1,7 +1,8 @@
 @import '../../scss/_media_breakpoints.scss';
 
 .container {
-  max-width: 1185px;
+  max-width: 1200px;
+  min-width: 320px;
   width: 100%;
   margin: 0 auto;
 }
@@ -11,18 +12,21 @@
   padding: 50px 0;
 
   .title {
-    margin: 0 0 20px;
+    margin: 0 20px 20px;
+    font-size: 30px;
+  }
+
+  .productsListInner {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 15px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
 }
 
-.productsListInner {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-  list-style: none;
-  margin: 0;
-  padding: 0 20px;
-}
+
 
 @include mobile {
   .container {
