--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -11,4 +11,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --swiper-theme-color: #de002b;
 }
