--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -18,6 +18,7 @@
   width: 30%;
   box-shadow: 0px 0px 10px 5px rgba(34, 60, 80, 0.2);
   border-radius: 5px;
+  height: 100%;
 
   .menuInner {
     margin: 0;
@@ -45,10 +46,42 @@
   }
 }
 
-.homeSlider {
+.rightBlock {
   width: 70%;
   border-radius: 10px;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+
+  .bestCategories {
+    display: flex;
+    justify-content: space-between;
+
+    .categoriesItem {
+      display: block;
+      width: 220px;
+      height: 150px;
+      background: #ddd;
+      border-radius: 20px;
+      padding: 20px;
+      font-size: 20px;
+      font-weight: 500;
+      color: inherit;
+      text-decoration: none;
+      transition: .3s;
+
+      &:hover {
+        transform: scale(1.03);
+        box-shadow: 0 0  15px 0px rgba(34, 60, 80, 0.4);
+      }
+    }
+  }
+
+  .slider {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @include mobile {
