--- a/src/components/BottomNav/BottomNav.module.scss
+++ b/src/components/BottomNav/BottomNav.module.scss
@@ -15,9 +15,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    height: 30px;
+    z-index: 12;
+    height: 60px;
     padding: 10px;
-    background-color: #ddd;
     display: flex;
     align-items: center;
     justify-content: space-between;
