--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -69,11 +69,11 @@
       font-weight: 500;
       color: inherit;
       text-decoration: none;
-      transition: .3s;
+      transition: 0.3s;
 
       &:hover {
         transform: scale(1.03);
-        box-shadow: 0 0  15px 0px rgba(34, 60, 80, 0.4);
+        box-shadow: 0 0 15px 0px rgba(34, 60, 80, 0.4);
       }
     }
   }
@@ -86,14 +86,18 @@
 
 @include mobile {
   .container {
-    max-width: calc(375px - 24px);
+    padding: 0;
   }
 
   .menu {
     display: none;
   }
 
-  .homeSlider {
+  .rightBlock {
     width: 100%;
+
+    .bestCategories {
+      display: none;
+    }
   }
 }
