--- a/src/components/BottomNav/BottomNav.module.scss
+++ b/src/components/BottomNav/BottomNav.module.scss
@@ -21,6 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background: #fff;
     box-shadow: 0px -5px 35px 0px rgba(34, 60, 80, 0.2);
 
     .navList {
