--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -2,10 +2,9 @@
 @import '../../scss/_media_breakpoints.scss';
 
 .container {
-  max-width: 1185px;
+  max-width: 1200px;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
 }
 
 .homeInner {
