--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -1,4 +1,5 @@
 @import '../../scss/variables';
+@import '../../scss/_media_breakpoints.scss';
 
 .container {
   max-width: 1200px;
@@ -10,7 +11,7 @@
 .news {
   padding: 50px 0;
 
-  .inner {
+  // .inner {
     .title {
       margin: 0 20px 20px;
       font-size: 30px;
@@ -24,7 +25,7 @@
         text-decoration: underline;
       }
     }
-  }
+  // }
 }
 
 .cardsBlock {
@@ -44,6 +45,23 @@
       display: block;
       width: 100%;
       height: auto;
+    }
+  }
+}
+
+@include mobile {
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+
+  .news {
+    padding: 20px 0;
+
+    .title {
+      margin-left: 0;
+      font-size: 20px;
     }
   }
 }
