--- a/src/components/ProductsList/ProductsList.module.scss
+++ b/src/components/ProductsList/ProductsList.module.scss
@@ -30,10 +30,20 @@
 
 @include mobile {
   .container {
-    max-width: calc(375px - 24px);
+    padding: 0 15px;
   }
 
   .productsList {
     padding: 20px 0;
+
+    .title {
+      margin-left: 0;
+      font-size: 20px;
+    }
+
+    .productsListInner {
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 10px;
+    }
   }
 }
