--- a/src/components/Trust/Trust.module.scss
+++ b/src/components/Trust/Trust.module.scss
@@ -1,4 +1,5 @@
 @import '../../scss/variables';
+@import '../../scss/_media_breakpoints.scss';
 
 .container {
   max-width: 1200px;
@@ -10,19 +11,17 @@
 .trust {
   padding: 50px 0;
 
-  .inner {
-    .title {
-      margin: 0 20px 20px;
-      font-size: 30px;
-    }
+  .title {
+    margin: 0 20px 20px;
+    font-size: 30px;
+  }
 
-    a {
-      color: inherit;
-      text-decoration: none;
+  a {
+    color: inherit;
+    text-decoration: none;
 
-      &:hover {
-        text-decoration: underline;
-      }
+    &:hover {
+      text-decoration: underline;
     }
   }
 }
@@ -44,6 +43,21 @@
       display: block;
       width: 100%;
       height: auto;
+    }
+  }
+}
+
+@include mobile {
+  .container {
+    padding: 0 15px;
+  }
+
+  .trust {
+    padding: 20px 0;
+
+    .title {
+      margin-left: 0;
+      font-size: 20px;
     }
   }
 }
