--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,6 +11,8 @@
 
 .header {
   padding: 0 0 20px;
+  // position: sticky;
+  top: 0;
 }
 
 .secondary {
@@ -122,7 +124,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 30px;
-  padding: 40px 0;
+  padding: 30px 0;
   height: 100%;
 
   .headerTop {
