--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -23,24 +23,22 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    transition: border-left 0.2s linear;
 
-    li:hover {
-      border-left: 2px solid $color-primary;
-    }
-  }
+    .menuItem {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 5px;
+      text-decoration: none;
+      border-bottom: 1px solid #ccc;
+      border-left: 2px solid transparent;
+      font-size: 14px;
+      color: #333;
 
-  .menuItem {
-    color: #333;
-    text-decoration: none;
-    padding: 10px;
-    display: block;
-
-    border-bottom: 1px solid #ccc;
-
-    transition: color 0.2s linear;
-    &:hover {
-      color: red;
+      &:hover {
+        color: red;
+        border-color: $color-primary;
+      }
     }
   }
 }
@@ -56,23 +54,56 @@
   .bestCategories {
     display: flex;
     justify-content: space-between;
+    transition: 0.3s;
+    gap: 20px;
 
     .categoriesItem {
-      display: block;
-      width: 220px;
-      height: 150px;
-      background: #ddd;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      height: 200px;
       border-radius: 20px;
-      padding: 20px;
-      font-size: 20px;
-      font-weight: 500;
-      color: inherit;
-      text-decoration: none;
-      transition: 0.3s;
+      position: relative;
+      overflow: hidden;
 
-      &:hover {
-        transform: scale(1.03);
-        box-shadow: 0 0 15px 0px rgba(34, 60, 80, 0.4);
+      .cover {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background: rgba(#000, 0.3);
+        z-index: 2;
+      }
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        transition: 0.2s;
+      }
+
+      span {
+        position: absolute;
+        z-index: 2;
+        color: #fff;
+        color: #fff;
+        font-size: 26px;
+        font-weight: 500;
+        text-align: center;
+        transition: 0.2s;
+      }
+
+      &:hover img {
+        transform: scale(1.1);
+      }
+
+      &:hover span {
+        transform: translateY(-5px) scale(1.1);
       }
     }
   }
