--- a/src/components/Brands/Brands.module.scss
+++ b/src/components/Brands/Brands.module.scss
@@ -26,15 +26,10 @@
     padding: 0;
   }
 
-  .card {
-    border-radius: 20px;
-    overflow: hidden;
-
-    img {
-      display: block;
-      width: 100%;
-      height: auto;
-    }
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 }
 
