--- a/src/components/MenuMobile/MenuMobile.module.scss
+++ b/src/components/MenuMobile/MenuMobile.module.scss
@@ -22,7 +22,7 @@
   left: -100%;
   width: 100%;
   height: 100vh;
-  padding: 76px 24px 24px;
+  padding: 70px 24px;
   background: white;
   box-shadow: 4px 4px 30px 5px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
