--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -187,10 +187,46 @@
 
     .tagsBar {
       position: absolute;
-      top: 45px;
+      top: 50px;
       left: 0;
       width: 100%;
-      background: red;
+      // background: #ebebeb;
+      border-radius: 10px;
+      padding: 5px;
+      display: none;
+      align-items: center;
+      gap: 10px;
+      overflow: hidden;
+      font-size: 14px;
+
+      .tags {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        gap: 5px;
+
+        .tagsItem {
+          padding: 2px 10px;
+          background: #ccc;
+          border-radius: 15px;
+          transition: background .2s ease;
+          cursor: pointer;
+
+          &:hover {
+            background: #a4a4a4;
+          }
+        }
+
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
+      }
+    }
+
+    .active {
+      display: flex;
     }
   }
 
