--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -4,3 +4,13 @@
   padding: 2rem;
   text-align: center;
 }
+
+.page {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  max-width: 100%;
+  position: relative;
+}
