--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -14,10 +14,13 @@
 }
 
 .menu {
-  width: 30%;
+  // width: 30%;
+  max-width: 340px;
+  width: 100%;
   box-shadow: 0px 0px 10px 5px rgba(34, 60, 80, 0.2);
   border-radius: 5px;
   height: 100%;
+  z-index: 10;
 
   .menuInner {
     margin: 0;
@@ -39,6 +42,64 @@
         color: red;
         border-color: $color-primary;
       }
+    }
+
+    li {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      position: relative;
+
+      &:hover > ul {
+        display: flex;
+      }
+
+      ul {
+        padding: 0;
+        position: absolute;
+        left: 340px;
+        top: 0;
+        width: 100%;
+        background: #fff;
+        padding: 20px;
+        // display: flex;
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        border-left: 1px solid #333;
+        box-shadow: 0 0 30px 5px rgba(#000, 0.2);
+
+        &:hover ul {
+          display: flex;
+        }
+
+        li {
+          position: relative;
+
+          ul {
+            position: absolute;
+            top: -20px;
+            left: 320px;
+            display: none;
+          }
+        }
+
+        a {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+
+        a:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+      display: block;
     }
   }
 }
