--- a/src/components/BottomNav/BottomNav.module.scss
+++ b/src/components/BottomNav/BottomNav.module.scss
@@ -33,6 +33,13 @@
       align-items: center;
       width: 100vw;
       height: 100%;
+
+      button {
+        border: none;
+        background: none;
+        cursor: pointer;
+        padding: 0;
+      }
     }
 
     .navLink {
