немного доделал страницу товара

--- a/src/pages/Wishlist/Wishlist.module.scss
+++ b/src/pages/Wishlist/Wishlist.module.scss
@@ -1,7 +1,11 @@
-.wishlist {
+.container {
+  max-width: 1200px;
+  min-width: 320px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.container {
+.wishlist {
 }
 
 .main {
