--- a/src/components/Gofra/Gofra.module.scss
+++ b/src/components/Gofra/Gofra.module.scss
@@ -1,4 +1,5 @@
 @import '../../scss/_media_breakpoints.scss';
+@import '../../scss/variables';
 
 .container {
   max-width: 1200px;
@@ -9,34 +10,98 @@
 
 .gofra {
   padding: 0 0 40px;
-  font-size: 18px;
 
-  h2 {
+  .productTitle {
     font-size: 26px;
-    margin-bottom: 50px;
+    margin: 0;
+    padding: 10px 0;
+  }
+
+  .imageSection {
+    display: flex;
+    gap: 15px;
+    width: 50%;
+
+    .allImages {
+      width: 100%;
+      max-width: 60px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+      img {
+        width: 100%;
+        max-width: 150px;
+        height: auto;
+        display: block;
+        object-fit: contain;
+        padding: 5px;
+        border: 1px solid transparent;
+        border-radius: 5px;
+        position: relative;
+        background-color: #fff;
+
+        &:hover {
+          border-color: red;
+          cursor: pointer;
+        }
+
+        &:after {
+          background-color: #fc7b08;
+          content: '';
+          display: block;
+          height: 100%;
+          left: -24px;
+          position: absolute;
+          top: 0;
+          width: 3px;
+        }
+      }
+
+      .active {
+        border-color: red;
+      }
+    }
+
+    .mainImage {
+      flex: 1;
+      background: #fff;
+      display: block;
+      border-radius: 5px;
+      width: 100%;
+      aspect-ratio: 1 / 1;
+      object-fit: contain;
+    }
   }
 
   .mainInfo {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
+    .mainInfoWrap {
+      display: flex;
+      justify-content: space-between;
+      gap: 30px;
+    }
+
+
     padding-bottom: 50px;
+    padding: 15px;
+    background-color: #f6f6f6;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16);
 
     img {
-      min-width: 500px;
       width: 100px;
       height: auto;
     }
 
-    .product {
+    .productSection {
       flex: 1;
-      padding: 40px;
-      background-color: #eaeaea;
       border-radius: 20px;
       position: relative;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      align-items: flex-start;
+      gap: 20px;
+      padding-right: 15px;
 
       .productInfo {
         p {
@@ -48,77 +113,160 @@
         }
       }
 
+      .productFullName {
+        margin: 0;
+      }
+
+      .rating {
+        padding: 8px 15px;
+        // background-color: #fff;
+        border-radius: 10px;
+        border: 1px solid #ccc;
+      }
+
       .productOrder {
         display: flex;
         justify-content: space-between;
-        padding-top: 20px;
+        flex-direction: column;
+        gap: 20px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+        width: 100%;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
 
-        .buy {
-          border: none;
-          padding: 20px 40px;
-          background-color: #de002b;
-          border-radius: 20px;
-          cursor: pointer;
-          font-size: 20px;
-          font-weight: 500;
-          transition: 0.2s ease;
+        .order {
+          display: flex;
+          justify-content: space-between;
+          gap: 10px;
 
-          &:hover {
-            background-color: #c80027;
+          .price {
+            flex: 1;
+            font-size: 24px;
+            font-weight: 600;
+            // background-color: #eee;
+            background: linear-gradient(270deg,#f6f6f6,hsla(0,0%,100%,0));
+            padding-block: 5px;
+            border-radius: 10px;
+          }
+
+          .btn {
+            min-width: 45px;
+            padding: 0;
+            border: 0;
+            background-color: transparent;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            font-weight: 500;
+            transition: background-color .1s ease-in-out;
+          }
+
+          .btnFavourite {
+            border: 1px solid #bbb;
+            color: #bbb;
+
+            &:hover {
+              background-color: #eee;
+            }
+          }
+
+          .btnToCart {
+            color: #fff;
+            background-color: $color-primary;
+            padding-block: 0;
+            padding-inline: 20px;
+
+            &:hover {
+              background-color: #ca0027;
+            }
           }
         }
 
         .orderInfo {
-          P {
-            font-weight: 500;
-            margin: 0;
-          }
-
-          span {
-            padding-left: 20px;
-            text-align: right;
-          }
-        }
-
-        form {
           display: flex;
-          flex-direction: column;
-          align-self: flex-end;
-          gap: 5px;
+          gap: 10px;
+          font-size: 14px;
 
-          div {
+          .inStock,
+          .delivery {
+            background-color: #f7f7f7;
+            padding: 5px 10px;
+            border-radius: 10px;
             display: flex;
-            justify-content: space-between;
-            gap: 5px;
-            width: 100%;
+            flex-direction: column;
 
-            input {
-              height: 40px;
-              width: 60px;
-              outline: none;
-              border: 1px solid #ccc;
-              border-radius: 10px;
-              padding: 10px;
 
-              &:focus {
-                border-color: red;
-              }
+            &:hover {
+              box-shadow: inset 0 0 0 50px rgba(0,0,0,.02);
             }
 
-            button {
-              background-color: #de002b;
-              border: none;
-              width: 40px;
-              border-radius: 10px;
-              cursor: pointer;
-              transition: background-color .2s ease;
+            a {
+              text-decoration: none;
 
               &:hover {
-                background-color: #b90024;
+                text-decoration: underline;
               }
             }
           }
         }
+
+        // .buy {
+        //   border: none;
+        //   padding: 20px 40px;
+        //   background-color: #de002b;
+        //   border-radius: 20px;
+        //   cursor: pointer;
+        //   font-size: 20px;
+        //   font-weight: 500;
+        //   transition: 0.2s ease;
+
+        //   &:hover {
+        //     background-color: #c80027;
+        //   }
+        // }
+
+        // form {
+        //   display: flex;
+        //   flex-direction: column;
+        //   align-self: flex-end;
+        //   gap: 5px;
+
+        //   div {
+        //     display: flex;
+        //     justify-content: space-between;
+        //     gap: 5px;
+        //     width: 100%;
+
+        //     input {
+        //       height: 40px;
+        //       width: 60px;
+        //       outline: none;
+        //       border: 1px solid #ccc;
+        //       border-radius: 10px;
+        //       padding: 10px;
+
+        //       &:focus {
+        //         border-color: red;
+        //       }
+        //     }
+
+        //     button {
+        //       background-color: #de002b;
+        //       border: none;
+        //       width: 40px;
+        //       border-radius: 10px;
+        //       cursor: pointer;
+        //       transition: background-color 0.2s ease;
+
+        //       &:hover {
+        //         background-color: #b90024;
+        //       }
+        //     }
+        //   }
+        // }
       }
     }
   }
