--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,7 +19,6 @@
   padding: 10px 0;
   background-color: $color-primary;
   color: #ffffff;
-  font-size: 16px;
   font-weight: 700;
 
   .inner {
@@ -125,7 +124,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 30px;
-  padding: 30px 0;
+  padding: 10px 0;
   height: 100%;
 
   .headerTop {
@@ -263,7 +262,7 @@
 
 .headerTooltip {
   box-shadow: 0 16px 16px -16px rgba(43, 52, 69, 0.1);
-  background-color: #ebebeb;
+  background-color: #f6f6f6;
   border-radius: 5px;
   height: 50px;
 
