--- a/src/pages/Order/Order.module.scss
+++ b/src/pages/Order/Order.module.scss
@@ -1,3 +1,10 @@
+.container {
+  max-width: 1200px;
+  min-width: 320px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .order {
   padding-inline: 15px;
 }
