--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,6 +9,7 @@
   font-family: Montserrat, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 14px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
