доверстал немного страницу профиля

--- a/src/pages/Order/Order.module.scss
+++ b/src/pages/Order/Order.module.scss
@@ -5,6 +5,11 @@
   margin: 0 auto;
 }
 
+.sectionTitle {
+  margin: 0;
+  padding-block: 20px;
+}
+
 .order {
-  padding-inline: 15px;
+  padding-block-end: 20px;
 }
