--- a/src/components/ProductsList/ProductsList.module.scss
+++ b/src/components/ProductsList/ProductsList.module.scss
@@ -17,8 +17,9 @@
   }
 
   .productsListInner {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 15px;
     list-style: none;
     margin: 0;
@@ -42,7 +43,8 @@
     }
 
     .productsListInner {
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      grid-template-columns: 1fr;
+
       gap: 10px;
     }
   }
