сверстал страницу избранного

--- a/src/components/ProductsCard/ProductsCard.module.scss
+++ b/src/components/ProductsCard/ProductsCard.module.scss
@@ -101,7 +101,7 @@
 
     &:hover {
       background-color: white;
-      border-color: #eee;
+      // border-color: #eee;
       color: #eee;
     }
   }
