--- a/src/components/BottomNav/BottomNav.module.scss
+++ b/src/components/BottomNav/BottomNav.module.scss
@@ -55,13 +55,16 @@
       .navIcon {
         height: 22px;
         fill: #8a8a8a;
-        color: transparent;
       }
 
       span {
         margin: 0;
         font-size: 10px;
         font-weight: 400;
+      }
+
+      svg {
+        color: #8a8a8a;
       }
     }
 
