--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -209,7 +209,7 @@
           padding: 2px 10px;
           background: #ccc;
           border-radius: 15px;
-          transition: background .2s ease;
+          transition: background 0.2s ease;
           cursor: pointer;
 
           &:hover {
@@ -333,6 +333,7 @@
 
   .header {
     padding: 10px 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16);
   }
 
   .secondary {
